bridge-firmwareOOP/debuglog.txt
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:116:18: error: 'A8' was not declared in this scope
   {"shrebutton", A8}
                  ^~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:116:18: note: suggested alternative: 'A7'
   {"shrebutton", A8}
                  ^~
                  A7
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:117:1: error: could not convert '{{"accx1", A5}, {"accy1", A4}, {"accx2", A1}, {"accy2", A0}, {"c_button1", A6}, {"z_button1", A7}, {"c_button2", A2}, {"z_button2", A3}, {"shrebutton", <expression error>}}' from '<brace-enclosed initializer list>' to 'std::map<std::basic_string<char>, unsigned char>'
 };
 ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::init()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:540:7: error: 'NunchuckFunctions' has not been declared
       NunchuckFunctions::Wire.setClock(10000) ;
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:543:7: error: 'NunchuckFunctions' has not been declared
       NunchuckFunctions::selectNunchuckChannel(0);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:544:7: error: 'NunchuckFunctions' has not been declared
       NunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:545:7: error: 'NunchuckFunctions' has not been declared
       NunchuckFunctions::selectNunchuckChannel(1);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:546:7: error: 'NunchuckFunctions' has not been declared
       NunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::readInput()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:562:9: error: 'NunchuckFunctions' has not been declared
         NunchuckFunctions::selectNunchuckChannel(n);
         ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:564:13: error: 'NunchuckFunctions' has not been declared
         if (NunchuckFunctions::nunchuck_get_data()) {
             ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:565:26: error: 'NunchuckFunctions' has not been declared
           accx[n] = (int)NunchuckFunctions::nunchuck_joyx() - NUNCHUCK_X_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:566:26: error: 'NunchuckFunctions' has not been declared
           accy[n] = (int)NunchuckFunctions::nunchuck_joyy() - NUNCHUCK_Y_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:567:30: error: 'NunchuckFunctions' has not been declared
           c_button[n] = (int)NunchuckFunctions::nunchuck_cbutton();
                              ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:568:30: error: 'NunchuckFunctions' has not been declared
           z_button[n] = (int)NunchuckFunctions::nunchuck_zbutton();
                              ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In function 'void loop()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:626:31: error: 'void Contr::operate()' is protected within this context
         controller -> operate();
                               ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:221:10: note: declared protected here
     void operate() {
          ^~~~~~~

Error during build: exit status 1
